@@ -687,6 +687,8 @@ library:
 @tab .sol files used in Sierra Online games
 @item Matroska         @tab    @tab X
 @end multitable
+@item Electronic Arts Multimedia    @tab    @tab X
+@tab used in various EA games; files have extensions like WVE and UV2
 
 @code{X} means that the encoding (resp. decoding) is supported.
 
